[package]
name = "pcisph_rs"
version = "0.1.0"
edition = "2018"

[dependencies]
glium = "*"
glam = "*"
cgmath = "*"
rand = "*"
rayon = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true # uncomment for flamegraphs
#lto = "fat"
#panic = "abort"
#codegen-units = 1
