[package]
name = "pcisph_rs"
version = "0.1.0"
authors = ["Lucas V. Schuermann <lucas@lvs.io>"]
edition = "2018"

[dependencies]
glium = "0.30.1"
glam = "0.17.3"
cgmath = "0.18.0"
rand = "0.8.4"
rayon = "1.5.1"
log = "0.4"
# usually this would be present in a binary-specific section
env_logger = "0.9.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
# debug = true # uncomment for flamegraphs
